[package]
name = "url-normalizer"
version = "0.1.0"
authors = ["Mikhail Svetov <svmk-work@yandex.ru>"]

description = "URL normalization"
keywords=["url","normalization"]
documentation = "https://svmk.github.io/url-normalizer/0.1.0/url-normalizer/"
repository = "https://github.com/svmk/url-normalizer"
readme="README.md"
license = "MIT"

[dependencies]
url="1.5"