[package]
name = "url-normalizer"
version = "0.2.0"
authors = ["Mikhail Svetov <svmk-work@yandex.ru>"]

description = "URL normalization"
keywords=["url","normalization"]
documentation = "https://docs.rs/url-normalizer"
repository = "https://github.com/svmk/url-normalizer"
readme="README.md"
license = "MIT"

[dependencies]
url = "2.0"